# calcProject

./: .gitignore  CMakeLists.txt  Header.h  Readme.txt  SourceFunctions.cpp  main.cpp
logs/: calc-log.txt
src/: helpers.cpp  helpers.h  main.cpp  math.h  math_function.cpp  source_functions.cpp
